# MarketAlphaMonitor

./: .gitignore  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  deploy.yaml  grafana-ui-testing.yaml  market-tracker.yml  yahoo-etl.yml
grafana/provisioning/alerting/: contact-points.yml  policies.yml  stock.yml
grafana/provisioning/dashboards/: dashboard.yml  market.json
grafana/provisioning/datasources/: postgres.yml
market-tracker/: Dockerfile  pyproject.toml  requirements.txt
market-tracker/app/: __init__.py  compat.py  db.py  main.py  models.py
market-tracker/app/routes/: health.py  indicators.py  quotes.py
market-tracker/tests/: test_api.py  test_contracts.py  test_ui.py
postgres/: init.sql
scripts/: setup.sh  test.sh
tests/: fastapi_base.py
tests/load/: load_test.js
yahoo_etl/: Dockerfile  __init__.py  db.py  etl.py  pyproject.toml  requirements.txt  scheduler.py
yahoo_etl/tests/: test_etl.py  test_indicators.py
