[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-tracker"
version = "0.1.0"
description = "Market Tracker FastAPI application"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*"]
exclude = ["tests*"]
